# sparqlslurper

./: .gitignore  AUTHORS  ChangeLog  Pipfile  README.ipynb  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
sparql_slurper/: __init__.py  _graphdb_slurpygraph.py  _slurpygraph.py
sparqlslurper/: __init__.py  _graphdb_slurpygraph.py  _slurpygraph.py  _user_agent.py  git_describe.txt
tests/: __init__.py  test_already_resolved.py  test_graphdb_bnodes.py  test_persistent_bnode.py  test_print_options.py  test_sparql_parameters.py  test_wikidata_reactome.py
