[metadata]
name = sparql_slurper
url = http://github.com/hsolbrig/sparql_slurper
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = SPARQL Slurper for rdflib
license = Apache 2.0
python-requires = >=3.6
classifier =
'Development Status :: 4 - Beta',
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: Apache 2.0
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    SPARQL
    ShEx
    RDF
    rdflib

[files]
packages =
    sparql_slurper
