[metadata]
name = SPARQLSlurper
url = http://github.com/hsolbrig/sparql_slurper
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = SPARQL Slurper for rdflib
license = CC0 1.0 Universal
python-requires = >=3.6
classifier =
'Development Status :: 4 - Beta',
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

keywords =
    SPARQL
    ShEx
    RDF
    rdflib

[files]
packages =
    sparql_slurper
