[metadata]
name = sparqlslurper
url = http://github.com/hsolbrig/sparqlslurper
author = Harold Solbrig
author_email = solbrig@jhu.edu
summary = SPARQL Slurper for rdflib
license = CC0 1.0 Universal
python_requires = >=3.7.4
classifier =
'development status :: 4 - Beta',
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

keywords =
    SPARQL
    ShEx
    RDF
    rdflib

[files]
packages =
    sparql_slurper
